整理目录，通过前后端整合测试