@@ -21,7 +21,7 @@
     <!--配置项目的输出编码-->
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <!--配置项目的jdk版本-->
-    <java.version>12</java.version>
+    <java.version>11</java.version>
   </properties>
 
   <dependencies>
@@ -111,17 +111,6 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
       </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <compilerArgument>--enable-preview</compilerArgument>
-          <testCompilerArgument>--enable-preview</testCompilerArgument>
-          <source>12</source>
-          <target>12</target>
-        </configuration>
-      </plugin>
     </plugins>
   </build>
-
 </project>
